--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
-                <div class="text-2">Saurabh Wabale</div>
+                <div class="text-2">Nitin Kharade</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
                 <a href="#">Scroll to know me</a>
             </div>
@@ -53,7 +53,7 @@
                     <img src="images/img1.jpg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Saurabh and I'm a <span class="typing-2"></span></div>
+                    <div class="text">I'm Nitin and I'm a <span class="typing-2"></span></div>
                     <p>Seeking a dynamic role in Data Analysis, Data Science, Business Strategy, or Python Development to 
                         apply my strong analytical acumen and problem-solving skills for driving business success.
                         </p>
@@ -214,7 +214,7 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Saurabh Wabale</div>
+                                <div class="sub-title">Nitin Kharade</div>
                             </div>
                         </div>
                         <div class="row">
@@ -228,7 +228,7 @@
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">saurabhwabale8734@gmail.com</div>
+                                <div class="sub-title">kharaden7@gmail.com</div>
                             </div>
                         </div>
                     </div>
@@ -260,7 +260,7 @@
     </section>
     <!-- footer section start -->
     <footer>
-        <span>Created By <a>Saurabh Wabale</a> | <span class="far fa-copyright"></span> 2024 All rights reserved.</span>
+        <span>Created By <a>Nitin Kharade</a> | <span class="far fa-copyright"></span> 2024 All rights reserved.</span>
     </footer>
     <script src="script.js"></script>
 </body>
