--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
         <div class="max-width">
             <h2 class="title">My skills</h2>
             <div class="skills-content">
-                <div class="column left">
+                <div class=" column left">
                     <div class="text">My creative skills & experiences.</div>
                     <p>I am seeking collaboration opportunities in the realm of Data Analysis, where I can apply my expertise in extracting meaningful insights from data to solve real-world problems. Eager to learn and open to collaborations, I actively seek new opportunities to enhance my analytical skills and contribute to impactful projects in various domains.</p>
                     <a href="#">Read more</a>
                 </div>
-                <div class="column right">
+                <div class=" column right">
                     <div class="bars">
                         <div class="info">
                             <span>Python, R</span>
@@ -144,7 +144,7 @@
                             <span>Power BI</span>
                             <span>70%</span>
                         </div>
-                        <div class="line mysql"></div>
+                        <div class="line MySQL"></div>
                     </div>
                 </div>
             </div>
@@ -173,21 +173,21 @@
                     <div class="box">
                         <img src="images/Diamond.png" alt="">
                         <div class="text"> Diamond Price Prediction</div>
-                        <p>I implemented a Diamond Price Prediction model leveraging machine learning techniques, incorporating features such as carat, cut, color, clarity, and depth, to provide accurate and data-driven estimates for diamond prices.</p>
+                        <p>I implemented a Diamond Price Prediction model leveraging machine learning techniques, incorporating features such as carat, cut, colour, clarity, and depth, to provide accurate and data-driven estimates for diamond prices.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/SPAM.jpg" alt="">
                         <div class="text"> SMS Spam Detection Using NLP</div>
-                        <p>I developed an SMS Spam Detection system using Natural Language Processing (NLP), employing techniques such as text preprocessing, feature extraction, and machine learning algorithms to accurately identify and filter spam messages.</p>
+                        <p>I developed an SMS Spam Detection system using Natural Language Processing (NLP), employing text preprocessing, feature extraction, and machine learning algorithms to accurately identify and filter spam messages.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/Mobile-img2.jpeg" alt="">
                         <div class="text">Portfolio Website</div>
-                        <p>I crafted a dynamic and responsive Portfolio Website using a combination of HTML, CSS, and JavaScript, showcasing my skills, projects, and professional profile to create a compelling online presence.</p>
+                        <p>I crafted a dynamic and responsive Portfolio Website using HTML, CSS, and JavaScript, showcasing my skills, projects, and professional profile to create a compelling online presence.</p>
                     </div>
                 </div>
                 <div class="card">
@@ -195,7 +195,7 @@
                         <img src="images/mashroom.jpg" alt="">
                         <div class="text">Mashroom Classification
                         </div>
-                        <p>I implemented a Mushroom Classification model utilizing machine learning techniques, analyzing features such as cap shape, cap color, odor, and more, to predict whether a mushroom is edible or poisonous.</p>
+                        <p>I implemented a Mushroom Classification model utilizing machine learning techniques, analyzing features such as cap shape, cap colour, odour, and more, to predict whether a mushroom is edible or poisonous.</p>
                     </div>
                 </div>
             </div>
@@ -206,9 +206,9 @@
         <div class="max-width">
             <h2 class="title">Contact me</h2>
             <div class="contact-content">
-                <div class="column left">
+                <div class=" column left">
                     <div class="text">Get in Touch</div>
-                    <p>Thank you for visiting out my profile. If you would like to get into contact with me, please fill out the form below. or mail me at saurabhwabale8734@gmail.com</p>
+                    <p>Thank you for visiting my profile. If you would like to contact me, please fill out the form below. or mail me at kharaden7@gmail.com</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
