--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
         <div class="max-width">
             <h2 class="title">About me</h2>
             <div class="about-content">
-                <div class="column left">
+                <div class=" column left">
                     <img src="images/img1.jpg" alt="">
                 </div>
-                <div class="column right">
+                <div class= "column right">
                     <div class="text">I'm Nitin and I'm a <span class="typing-2"></span></div>
                     <p>Seeking a dynamic role in Data Analysis, Data Science, Business Strategy, or Python Development to 
-                        apply my strong analytical acumen and problem-solving skills for driving business success.
+                        apply my strong analytical acumen and problem-solving skills to drive business success.
                         </p>
-                    <a href="https://drive.google.com/uc?export=download&id=1TLmkH4IhqTnK4dlhxCTpcwMPR3KlN0TK" target="_blank">Download CV</a>
+                    <a href="https://drive.google.com/file/d/1ac1wsKeQdKZndBGyUKAUkBFoyFUcvn_l/view?usp=sharing" target="_blank">Download CV</a>
 
                 </div>
             </div>
