--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <p>Seeking a dynamic role in Data Analysis, Data Science, Business Strategy, or Python Development to 
                         apply my strong analytical acumen and problem-solving skills to drive business success.
                         </p>
-                    <a href="https://drive.google.com/file/d/1ac1wsKeQdKZndBGyUKAUkBFoyFUcvn_l/view?usp=sharing" target="_blank">Download CV</a>
+                    <a href="https://drive.google.com/file/d/1QTr9k8KvAj1MRo-EUtpat_Pe0G04BdM4/view?usp=drive_link" target="_blank">Download CV</a>
 
                 </div>
             </div>
