--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
         <div class="max-width">
             <h2 class="title">About me</h2>
             <div class="about-content">
-                <div class=" column left">
+                <div class="column left">
                     <img src="images/img1.jpg" alt="">
                 </div>
-                <div class= "column right">
+                <div class="column right">
                     <div class="text">I'm Nitin and I'm a <span class="typing-2"></span></div>
                     <p>Seeking a dynamic role in Data Analysis, Data Science, Business Strategy, or Python Development to 
-                        apply my strong analytical acumen and problem-solving skills to drive business success.
+                        apply my strong analytical acumen and problem-solving skills for driving business success.
                         </p>
-                    <a href="https://drive.google.com/file/d/1QTr9k8KvAj1MRo-EUtpat_Pe0G04BdM4/view?usp=drive_link" target="_blank">Download CV</a>
+                    <a href="https://drive.google.com/uc?export=download&id=1TLmkH4IhqTnK4dlhxCTpcwMPR3KlN0TK" target="_blank">Download CV</a>
 
                 </div>
             </div>
@@ -68,6 +68,7 @@
         <div class="max-width">
             <h2 class="title">My services</h2>
             <div class="serv-content">
+                <!-- Data Analysis -->
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-bar"></i>
@@ -75,6 +76,7 @@
                         <p>I excel in data analysis, showcasing expertise in data cleaning, exploratory data analysis, machine learning, and visualization, using tools such as Python, R, SQL, and Power BI to deliver actionable insights for informed decision-making.</p>
                     </div>
                 </div>
+                <!-- Statistical Analysis -->
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-area"></i>
@@ -82,6 +84,7 @@
                         <p>I offer comprehensive statistical analysis services, covering hypothesis testing, regression analysis, ANOVA, and other advanced statistical techniques to extract meaningful insights and inform data-driven decision-making.</p>
                     </div>
                 </div>
+                <!-- Machine Learning -->
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-cogs"></i>
@@ -89,6 +92,47 @@
                         <p>I possess essential expertise in machine learning, covering key aspects such as supervised and unsupervised learning, feature engineering, model evaluation, and deployment</p>
                     </div>
                 </div>
+                <!-- Deep Learning -->
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-brain"></i>
+                        <div class="text">Deep Learning</div>
+                        <p>Proficient in building and optimizing neural networks for image recognition, natural language processing, and predictive modeling using frameworks like TensorFlow, Keras, and PyTorch.</p>
+                    </div>
+                </div>
+                <!-- Data Visualization -->
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-chart-pie"></i>
+                        <div class="text">Data Visualization</div>
+                        <p>Transform complex datasets into compelling visual narratives using tools like Tableau, Power BI, Matplotlib, and Plotly, helping stakeholders understand key insights effectively.</p>
+                    </div>
+                </div>
+                <!-- Big Data Processing -->
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-database"></i>
+                        <div class="text">Big Data Processing</div>
+                        <p>Expertise in handling large datasets using technologies like Apache Spark, Hadoop, and cloud services to enable efficient data processing and analytics at scale.</p>
+                    </div>
+                </div>
+                <!-- AI Model Deployment -->
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-cloud-upload-alt"></i>
+                        <div class="text">AI Model Deployment</div>
+                        <p>Skilled in deploying machine learning and AI models using Docker, Kubernetes, and cloud platforms like AWS, Azure, and Google Cloud for real-world applications.</p>
+                    </div>
+                </div>
+                <!-- Web Application Deployment -->
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-laptop-code"></i>
+                        <div class="text">Web Application Deployment</div>
+                        <p>Deliver seamless deployment of web applications, integrating machine learning models with user interfaces using frameworks like Flask and Django, hosted on platforms such as AWS, Heroku, and Google Cloud.</p>
+                    </div>
+                </div>
+
                </div>
             </div>
         </div>
@@ -98,26 +142,29 @@
         <div class="max-width">
             <h2 class="title">My skills</h2>
             <div class="skills-content">
-                <div class=" column left">
+                <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
                     <p>I am seeking collaboration opportunities in the realm of Data Analysis, where I can apply my expertise in extracting meaningful insights from data to solve real-world problems. Eager to learn and open to collaborations, I actively seek new opportunities to enhance my analytical skills and contribute to impactful projects in various domains.</p>
                     <a href="#">Read more</a>
                 </div>
-                <div class=" column right">
+                <div class="column right">
+                    <!-- Python and R -->
                     <div class="bars">
                         <div class="info">
-                            <span>Python, R</span>
+                            <span>Python</span>
                             <span>90%</span>
                         </div>
                         <div class="line html"></div>
                     </div>
+                    <!-- SQL and NoSQL -->
                     <div class="bars">
                         <div class="info">
-                            <span>SQL, NoSQL</span>
+                            <span>MySQL</span>
                             <span>60%</span>
                         </div>
                         <div class="line css"></div>
                     </div>
+                    <!-- Machine Learning -->
                     <div class="bars">
                         <div class="info">
                             <span>Machine Learning</span>
@@ -125,77 +172,88 @@
                         </div>
                         <div class="line js"></div>
                     </div>
+                    <!-- Deep Learning -->
                     <div class="bars">
                         <div class="info">
-                            <span>Statistical Analysis</span>
+                            <span>Deep Learning</span>
                             <span>90%</span>
                         </div>
                         <div class="line php"></div>
                     </div>
+                    <!-- Natural Language Processing -->
                     <div class="bars">
                         <div class="info">
-                            <span>advanced Excel</span>
+                            <span>Natural Language Processing</span>
                             <span>70%</span>
                         </div>
                         <div class="line php"></div>
                     </div>
+                    <!-- Statistical Analysis --> 
                     <div class="bars">
                         <div class="info">
-                            <span>Power BI</span>
+                            <span>Statistical Analysis</span>
                             <span>70%</span>
                         </div>
-                        <div class="line MySQL"></div>
+                        <div class="line php"></div>
+                    </div>
+                    <!-- Data Visualization -->                   
+                    <div class="bars">
+                        <div class="info">
+                            <span>Power BI, Tableau</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="line mysql"></div>
+                    </div>
+                    <!-- Cloud Platforms -->
+                    <div class="bars">
+                        <div class="info">
+                            <span>Cloud Platforms (AWS, Azure, GCP)</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="line mysql"></div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- teams section start -->
+    <!-- Projects section start -->
     <section class="teams" id="teams">
         <div class="max-width">
             <h2 class="title">My Projects</h2>
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="images/loan-dfault.png" alt="">
+                        <img src="images/loan_risk_prediction.jpg" alt="">
                         <div class="text">Prediction & Risk Assessment of Loan Default</div>
                         <p>I've developed a predictive model for loan default risk assessment using diverse machine learning techniques, enhancing decision-making accuracy in the financial domain.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/WHI.jpg" alt="">
-                        <div class="text">Study of World Happiness Report 2020-21”</div>
-                        <p>I conducted an in-depth analysis of the World Happiness Report for the years 2020 and 2021, examining key factors influencing global well-being and identifying trends in happiness levels across nations</p>
+                        <img src="images/farmers_buddy.jpg" alt="Farmer's Buddy">
+                        <div class="text">Farmers Buddy</div>
+                        <p>Developed a machine learning-based solution to recommend optimal crops and detect crop diseases. Utilized historical data, weather conditions, and soil health metrics with CNN and ANN models to improve agricultural efficiency.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/Diamond.png" alt="">
-                        <div class="text"> Diamond Price Prediction</div>
-                        <p>I implemented a Diamond Price Prediction model leveraging machine learning techniques, incorporating features such as carat, cut, colour, clarity, and depth, to provide accurate and data-driven estimates for diamond prices.</p>
+                        <img src="images/health_prognosis.jpg" alt="Health Prognosis">
+                        <div class="text">Health Prognosis</div>
+                        <p>Developed an AI-driven solution for disease detection and risk prediction. Implemented deep learning models for fungal disease detection, heart attack prediction, and diabetes forecasting, alongside an NLP chatbot to enhance patient interaction.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/SPAM.jpg" alt="">
                         <div class="text"> SMS Spam Detection Using NLP</div>
-                        <p>I developed an SMS Spam Detection system using Natural Language Processing (NLP), employing text preprocessing, feature extraction, and machine learning algorithms to accurately identify and filter spam messages.</p>
+                        <p>I developed an SMS Spam Detection system using Natural Language Processing (NLP), employing techniques such as text preprocessing, feature extraction, and machine learning algorithms to accurately identify and filter spam messages.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/Mobile-img2.jpeg" alt="">
+                        <img src="images/portfolio_website.jpg" alt="">
                         <div class="text">Portfolio Website</div>
-                        <p>I crafted a dynamic and responsive Portfolio Website using HTML, CSS, and JavaScript, showcasing my skills, projects, and professional profile to create a compelling online presence.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/mashroom.jpg" alt="">
-                        <div class="text">Mashroom Classification
-                        </div>
-                        <p>I implemented a Mushroom Classification model utilizing machine learning techniques, analyzing features such as cap shape, cap colour, odour, and more, to predict whether a mushroom is edible or poisonous.</p>
+                        <p>I crafted a dynamic and responsive Portfolio Website using a combination of HTML, CSS, and JavaScript, showcasing my skills, projects, and professional profile to create a compelling online presence.</p>
                     </div>
                 </div>
             </div>
@@ -206,9 +264,9 @@
         <div class="max-width">
             <h2 class="title">Contact me</h2>
             <div class="contact-content">
-                <div class=" column left">
+                <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Thank you for visiting my profile. If you would like to contact me, please fill out the form below. or mail me at kharaden7@gmail.com</p>
+                    <p>Thank you for visiting out my profile. If you would like to get into contact with me, please fill out the form below. or mail me at saurabhwabale8734@gmail.com</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
