--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/img1.jpg" alt="">
+                    <img src="images/enhanced_img1.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Nitin and I'm a <span class="typing-2"></span></div>
                     <p>Seeking a dynamic role in Data Analysis, Data Science, Business Strategy, or Python Development to 
                         apply my strong analytical acumen and problem-solving skills for driving business success.
                         </p>
-                    <a href="https://drive.google.com/uc?export=download&id=1TLmkH4IhqTnK4dlhxCTpcwMPR3KlN0TK" target="_blank">Download CV</a>
+                    <a href="https://drive.google.com/file/d/1QTr9k8KvAj1MRo-EUtpat_Pe0G04BdM4/view?usp=drive_link" target="_blank">Download CV</a>
 
                 </div>
             </div>
@@ -100,12 +100,12 @@
                         <p>Proficient in building and optimizing neural networks for image recognition, natural language processing, and predictive modeling using frameworks like TensorFlow, Keras, and PyTorch.</p>
                     </div>
                 </div>
-                <!-- Data Visualization -->
+                <!-- Natural Language Processing -->
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-chart-pie"></i>
-                        <div class="text">Data Visualization</div>
-                        <p>Transform complex datasets into compelling visual narratives using tools like Tableau, Power BI, Matplotlib, and Plotly, helping stakeholders understand key insights effectively.</p>
+                        <i class="fas fa-language"></i>
+                        <div class="text">Natural Language Processing</div>
+                        <p>I specialize in NLP applications such as sentiment analysis, text classification, chatbot development, and language modeling using tools like spaCy, NLTK, and Hugging Face.</p>
                     </div>
                 </div>
                 <!-- Big Data Processing -->
@@ -114,6 +114,14 @@
                         <i class="fas fa-database"></i>
                         <div class="text">Big Data Processing</div>
                         <p>Expertise in handling large datasets using technologies like Apache Spark, Hadoop, and cloud services to enable efficient data processing and analytics at scale.</p>
+                    </div>
+                </div>
+                <!-- Data Visualization -->
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-chart-pie"></i>
+                        <div class="text">Data Visualization</div>
+                        <p>Transform complex datasets into compelling visual narratives using tools like Tableau, Power BI, Matplotlib, and Plotly, helping stakeholders understand key insights effectively.</p>
                     </div>
                 </div>
                 <!-- AI Model Deployment -->
@@ -132,7 +140,6 @@
                         <p>Deliver seamless deployment of web applications, integrating machine learning models with user interfaces using frameworks like Flask and Django, hosted on platforms such as AWS, Heroku, and Google Cloud.</p>
                     </div>
                 </div>
-
                </div>
             </div>
         </div>
@@ -244,7 +251,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/SPAM.jpg" alt="">
+                        <img src="images/SMS_spam_detection.jpg" alt="">
                         <div class="text"> SMS Spam Detection Using NLP</div>
                         <p>I developed an SMS Spam Detection system using Natural Language Processing (NLP), employing techniques such as text preprocessing, feature extraction, and machine learning algorithms to accurately identify and filter spam messages.</p>
                     </div>
