--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/enhanced_img1.jpg" alt="">
+                    <img src="images/enhanced_img1.jpg" alt="Enhanced Image" style="width: 100%; height: auto;">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Nitin and I'm a <span class="typing-2"></span></div>
