--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>I am seeking collaboration opportunities in the realm of Data Analysis, where I can apply my expertise in extracting meaningful insights from data to solve real-world problems. Eager to learn and open to collaborations, I actively seek new opportunities to enhance my analytical skills and contribute to impactful projects in various domains.</p>
+                    <p>Results-driven Data Scientist with experience designing AI-powered solutions to solve complex problems across industries. Skilled in developing and deploying machine learning and deep learning models, leveraging tools like Python, TensorFlow, and MySQL. Proficient in natural language processing, statistical analysis, and data visualization using tools such as Power BI and Tableau. Experienced in cloud platforms like AWS, Azure, and GCP for scalable model deployment. Adept at collaborating with cross-functional teams to drive innovation and achieve organizational goals.</p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
