--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Thank you for visiting out my profile. If you would like to get into contact with me, please fill out the form below. or mail me at saurabhwabale8734@gmail.com</p>
+                    <p>Thank you for visiting out my profile. If you would like to get into contact with me, please fill out the form below. or mail me </p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
